compiler/testData/diagnostics/tests/inline/localFun.fir.kt
// RUN_PIPELINE_TILL: SOURCE
fun main() {
    <!NOT_YET_SUPPORTED_LOCAL_INLINE_FUNCTION!>inline<!> fun a(){
    }
}